--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -26,7 +26,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Anja betreut derzeit für die OKF DE das EU-Forschungsprojekt Europeana Cloud (eCloud) als Projektleiterin. eCloud startete im Februar 2013. Ziel des Projektes ist es, ein basiertes System für die Europeana und ihre Aggregatoren zu entwickeln. eCloud wird neue Europeana-Inhalte und Metadaten bereitstellen, sowie ein neues Speichersystem und eine Plattform mit Methoden und Werkzeuge für Forscher (Europeana Research). Zuvor hat Anja an verschiedenen Linked Data-Projekten wie Wikidata, DBpedia und Linking Open Drug Data mitgearbeitet. Ihr Forschungsschwerpunkt ist Data Profiling auf Linked Open Data."
+  bio: "Anja betreut derzeit für die OKF DE das EU-Forschungsprojekt Europeana Cloud (eCloud) als Projektleiterin. eCloud startete im Februar 2013. Ziel des Projektes ist es, ein cloudbasiertes System für die Europeana und ihre Aggregatoren zu entwickeln. eCloud wird neue Europeana-Inhalte und Metadaten bereitstellen, sowie ein neues Speichersystem und eine Plattform mit Methoden und Werkzeuge für Forscher (Europeana Research). Zuvor hat Anja an verschiedenen Linked Data-Projekten wie Wikidata, DBpedia und Linking Open Drug Data mitgearbeitet. Ihr Forschungsschwerpunkt ist Data Profiling auf Linked Open Data."
   mail: anja.jentzsch@okfn.de
   twitter: anjeve
   website:
@@ -37,7 +37,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Julia arbeitet seit 2012 als Projektleiterin bei der Open Knowledge Foundation. Ihr Schwerpunkt liegt auf Projekten im Bereich Open Data und Civic Tech. Sie hat in den letzten Jahren eine Reihe an Community-Projekten umgesetzt, darunter „Stadt Land Code“ Deutschlands ersten Inkubator für Civc Tech und eine Reihe von Open Data Hackathons. Aktuell arbeitet sie an dem Projekt Code for Germany, einer deutschlandweiten Community, die digitale Werkzeuge und Anwendungen aus offenen Daten entwickelt. Julia hat Design und Neue Medien studiert und vor der Open Knowledge Foundation an politischen Kommunikationskampagnen mitgearbeitet. Sie engagiert sich im Verein Digitale Gesellschaft e. V. und spricht auf Konferenzen über freies Wissen und offene Tools."
+  bio: "Julia arbeitet seit 2012 als Projektleiterin bei der Open Knowledge Foundation. Ihr Schwerpunkt liegt auf Projekten im Bereich Open Data und Civic Tech. Sie hat in den letzten Jahren eine Reihe von Community-Projekten umgesetzt, darunter "Stadt Land Code", Deutschlands ersten Inkubator für Civic Tech und eine Reihe von Open-Data-Hackathons. Aktuell arbeitet sie an dem Projekt Code for Germany, einer deutschlandweiten Community, die digitale Werkzeuge und Anwendungen aus offenen Daten entwickelt. Julia hat Design und Neue Medien studiert und vor der Open Knowledge Foundation an politischen Kommunikationskampagnen mitgearbeitet. Sie engagiert sich im Verein Digitale Gesellschaft e. V. und spricht auf Konferenzen über freies Wissen und offene Tools."
   mail: julia.kloiber@okfn.de
   twitter: j_kloiber
   website: http://juliakloiber.com/
@@ -60,7 +60,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Katharina betreut für die OKF DE das Forschungsprojekt “DARIAH” und ist bevorzugt Technik- und Kulturhistorikerin, subtil Kultur- und Medienmanagerin, von Zeit zu Zeit Kuratorin (z.B. bei der re:publica) und in Teilzeit Research Associate am Hybrid Publishing Lab an der Leuphana Lüneburg. Sie mäandert an den Schnittstellen von Schönen Künsten und Technik und publiziert zu Netz- und Medienkunst sowie Digitaler Kultur. Besonders interessiert sie sich für kollaboratives Arbeiten und dafür was entsteht, wenn man Ressourcen offen zur Verfügung stellt, ohne Scheuklappen aus Handlungsanweisungen."
+  bio: "Katharina betreut für die OKF DE das Forschungsprojekt "DARIAH" und ist bevorzugt Technik- und Kulturhistorikerin, subtil Kultur- und Medienmanagerin, von Zeit zu Zeit Kuratorin (z.B. bei der re:publica) und in Teilzeit Research Associate am Hybrid Publishing Lab an der Leuphana Lüneburg. Sie mäandert an den Schnittstellen von Schönen Künsten und Technik und publiziert zu Netz- und Medienkunst sowie Digitaler Kultur. Besonders interessiert sie sich für kollaboratives Arbeiten und dafür was entsteht, wenn man Ressourcen offen zur Verfügung stellt, ohne Scheuklappen aus Handlungsanweisungen."
   mail: katharina.meyer@okfn.de
   twitter:
   website:
@@ -82,7 +82,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Bela hat einen Master in „European Studies on Society, Science & Technology“ und startete im November 2014 als Praktikant bei der OKF DE. Seit Januar 2015 ist er fest angestellt. Er unterstützt Helene Hahn's Projekt „Coding da Vinci“ als Projektassistent, leitet eigene Projekte und übernimmt Aufgaben der Öffentlichkeitsarbeit für die Organisation."
+  bio: "Bela hat einen Master in "European Studies on Society, Science & Technology" und startete im November 2014 als Praktikant bei der OKF DE. Seit Januar 2015 ist er fest angestellt. Er unterstützt das Projekt "Coding da Vinci" als Projektassistent, leitet eigene Projekte und übernimmt Aufgaben der Öffentlichkeitsarbeit für die Organisation."
   mail: bela.seeger@okfn.de
   twitter: belaseeger
   website:
@@ -93,7 +93,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Fiona begann im März 2014 als Praktikantin bei der Open Knowledge Foundation und unterstützt Julia Kloiber im Projekt “Code for Germany”. Seit August ist sie Projektassistentin und betreut die Community der dreizehn Labs in Deutschland. Nebenbei studiert sie Europäische Ethnologie an der Humboldt Universität zu Berlin und engagiert sich im Bereich der digitalen Alphabetisierung."
+  bio: "Fiona begann im März 2014 als Praktikantin bei der Open Knowledge Foundation und unterstützt das Projekt "Code for Germany". Seit August ist sie Projektassistentin und betreut die Community der Labs in Deutschland. Nebenbei studiert sie Europäische Ethnologie an der Humboldt-Universität zu Berlin und engagiert sich im Bereich der digitalen Alphabetisierung."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
   website:
@@ -163,7 +163,7 @@
   board: 1
   advisory: 0
   position: Vorsitzender
-  bio: "Daniel Dietrich engagiert sich seit Jahren für digitale Bürgerrechte und arbeitet intensiv zu verschiedenen Aspekten der Wissensgesellschaft und der digitalen Welt. Ihn interessiert die Frage, wie wir Technologien einsetzen können um die Welt ein kleines bisschen besser zu machen. Für die Open Knowledge Foundation ist er als Open-Data-Evangelist und Koordinator der Open Definition und der Arbeitsgruppe zu Open Government Data tätig. Er ist Mitgründer des Open Data Network und Vorsitzender der Open Knowledge Foundation Deutschland. Bis Anfang 2013 arbeitete er als Redakteur der Platform der Europäischen Kommission für Public Sector Information www.epsiplatform.eu. Bis Ende 2011 arbeitete er als wissenschaftlicher Mitarbeiter an der Technischen Universität Berlin im Fachbereich Informatik und Gesellschaft. Zuvor hat er einige Jahre in der IT Branche als Berater und Projektleiter gearbeitet. Weitere Informationen auf www.ddie.me."
+  bio: "Daniel Dietrich engagiert sich seit Jahren für digitale Bürgerrechte und arbeitet intensiv zu verschiedenen Aspekten der Wissensgesellschaft und der digitalen Welt. Ihn interessiert die Frage, wie wir Technologien einsetzen können um die Welt ein kleines bisschen besser zu machen. Für die Open Knowledge Foundation ist er als Open-Data-Evangelist, Koordinator der Open Definition und der Arbeitsgruppe zu Open Government Data tätig. Er ist Mitgründer des Open Data Network und Vorsitzender der Open Knowledge Foundation Deutschland. Bis Anfang 2013 arbeitete er als Redakteur der Platform der Europäischen Kommission für Public Sector Information www.epsiplatform.eu. Bis Ende 2011 war er wissenschaftlicher Mitarbeiter an der Technischen Universität Berlin im Fachbereich Informatik und Gesellschaft. Zuvor hat er einige Jahre in der IT-Branche als Berater und Projektleiter gearbeitet. Weitere Informationen auf www.ddie.me."
   mail: daniel.dietrich@okfn.org
   twitter: ddie
   website:
@@ -186,7 +186,7 @@
   board: 1
   advisory: 0
   position: Beisitzer
-  bio: "Christian Heise ist Politologe und wissenschaftlicher Mitarbeiter am Hybrid Publishing Lab im Centre for Digital Cultures an der Leuphana Universität Lüneburg, wo er zum Thema Open Science promoviert. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitlgied im Förderverein für freie Netzwerke e.V. (freifunk.net). Christian redet gern und schreibt viel über seine Schwerpunktthemen: Open Data, Open Government, Open Access, Open Science und Open Networks."
+  bio: "Christian Heise ist Politologe und wissenschaftlicher Mitarbeiter am Hybrid Publishing Lab im Centre for Digital Cultures an der Leuphana Universität Lüneburg, wo er zum Thema Open Science promoviert. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitglied im Förderverein für freie Netzwerke e.V. (freifunk.net). Christian redet gern und schreibt viel über seine Schwerpunktthemen: Open Data, Open Government, Open Access, Open Science und Open Networks."
   mail: christian.heise@okfn.org
   twitter: christianheise
   website: https://christianhei.se
@@ -221,7 +221,7 @@
   board: 1
   advisory: 0
   position: Beisitzer
-  bio: "Dr. Marcus Dapp berät als Principal Consultant der OKF Central (UK) Institutionen und Verwaltungen zum Einsatz von Open Data. Davor initiierte er als IT-Stratege der Landeshauptstadt München das ePartizipationsprojekt “MOGDy (Munich Open Government Day)”, welches damals als Pionierprojekt der Verwaltung galt und in Deutschland und auf EU-Ebene ausgezeichnet wurde. In dieser Zeit half er auch mit, den Verein OKF Deutschland zu gründen. Seit zehn Jahren beschäftigt sich Dr. Dapp mit der Gestaltung offener digitaler Wertschöpfungsprozesse in unterschiedlichsten Bereichen und Sektoren: von Open Source bis Open Innovation, von Open Data bis Open Government, von Open Access bis Free Culture. Herausgefordert und weiterentwickelt wird sein eigenes Verständnis durch die regelmässige Interaktion mit Studierenden seiner Vorlesung “Digitale Nachhaltigkeit” an der ETH Zürich, wo er zu den Auswirkungen von Softwarepatentierung auf Open Source Innovation promovierte. Dr. Dapp wird von Organisationen aus Wirtschaft und Politik als unabhängiger Berater beigezogen und spricht regelmässig auf nationalen und internationalen Veranstaltungen."
+  bio: "Dr. Marcus Dapp berät als Principal Consultant der OKF Central (UK) Institutionen und Verwaltungen zum Einsatz von Open Data. Davor initiierte er als IT-Stratege der Landeshauptstadt München das ePartizipationsprojekt "MOGDy (Munich Open Government Day)", welches damals als Pionierprojekt der Verwaltung galt und in Deutschland und auf EU-Ebene ausgezeichnet wurde. In dieser Zeit half er auch mit, den Verein OKF Deutschland zu gründen. Seit zehn Jahren beschäftigt sich Dr. Dapp mit der Gestaltung offener digitaler Wertschöpfungsprozesse in unterschiedlichsten Bereichen und Sektoren: von Open Source bis Open Innovation, von Open Data bis Open Government, von Open Access bis Free Culture. Herausgefordert und weiterentwickelt wird sein eigenes Verständnis durch die regelmässige Interaktion mit Studierenden seiner Vorlesung “Digitale Nachhaltigkeit” an der ETH Zürich, wo er zu den Auswirkungen von Softwarepatentierung auf Open Source Innovation promovierte. Dr. Dapp wird von Organisationen aus Wirtschaft und Politik als unabhängiger Berater beigezogen und spricht regelmässig auf nationalen und internationalen Veranstaltungen."
   mail:
   twitter:
   website:
@@ -244,7 +244,7 @@
   board: 1
   advisory: 0
   position: Beisitzer
-  bio: "Prof. Dr. Sören Auer leitet den Lehrstuhl Enterprise Information Systems an der Universität Bonn und eine Arbeitsgruppe am Fraunhofer Institut für Analysis und Informationssysteme (IAIS). Er ist Begründer mehrerer international beachteter Forschungs- und Entwicklungsvorhaben wie z.B. des Wikipedia-Semantifizierungs-Projektes DBpedia, der OpenCourseWare-Plattform SlideWiki.org oder des Social Semantic Web Toolkits OntoWiki. Dr. Auer ist Autor von über 100 referierten wissenschaftlichen Publikationen, Organisator vieler wissenschaftlicher Veranstaltungen. Seit 2010 leitet er das im EU RP7 geförderte Forschungsprojekt “LOD2 – Creating Knowledge out of Interlinked Data”. Er arbeitet als Experte für Unternehmen, die Europäische Kommission, das W3C und ist Mitglied des Advisory-Boards der Open Knowledge Foundation."
+  bio: "Prof. Dr. Sören Auer leitet den Lehrstuhl Enterprise Information Systems an der Universität Bonn und eine Arbeitsgruppe am Fraunhofer Institut für Analysis und Informationssysteme (IAIS). Er ist Begründer mehrerer international beachteter Forschungs- und Entwicklungsvorhaben wie z.B. des Wikipedia-Semantifizierungs-Projektes DBpedia, der OpenCourseWare-Plattform SlideWiki.org oder des Social Semantic Web Toolkits OntoWiki. Dr. Auer ist Autor von über 100 referierten wissenschaftlichen Publikationen und Organisator vieler wissenschaftlicher Veranstaltungen. Seit 2010 leitet er das im EU RP7 geförderte Forschungsprojekt "LOD2 – Creating Knowledge out of Interlinked Data". Er arbeitet als Experte für Unternehmen, die Europäische Kommission, das W3C und ist Mitglied des Advisory-Boards der Open Knowledge Foundation."
   mail:
   twitter:
   website:
