update bio fiona

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -82,7 +82,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Fiona begann im März 2014 als Praktikantin bei der Open Knowledge Foundation und unterstützt das Projekt „Code for Germany“. Seit August ist sie Projektassistentin und betreut die Community der Labs in Deutschland. Nebenbei studiert sie Europäische Ethnologie an der Humboldt-Universität zu Berlin und engagiert sich im Bereich der digitalen Alphabetisierung."
+  bio: "Fiona ist Community Organizerin für Code for Germany. Sie betreut 20 Open Knowledge Labs in Deutschland und arbeitet gemeinsam mit Julia Kloiber am Projekt. Nebenbei studiert sie Europäische Ethnologie an der Humboldt-Universität zu Berlin und engagiert sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
   website:
