--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -105,9 +105,9 @@
   board: 0
   advisory: no
   position:
-  bio: "Arne betreut für die Open Knowledge Foundation das Portal FragDenStaat.de und beschäftigt sich mit Informationsfreiheit. Er arbeitet nebenbei als freier Journalist und engagiert sich in weiteren NGOs zu Themen wie Transparenz und Lobbyismus."
+  bio: "Arne betreut für die Open Knowledge Foundation das Portal FragDenStaat.de und beschäftigt sich mit Informationsfreiheit. Er ist Politikwissenschaftler, arbeitet nebenbei als freier Journalist und engagiert sich in weiteren NGOs zu Themen wie Transparenz und Lobbyismus, unter anderem für Hochschulwatch.de."
   mail: arne.semsrott@okfn.de
-  twitter:
+  twitter: arnesemsrott
   website:
 
 - name: Michael Hörz
