--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -167,9 +167,7 @@ name: Mara Mendes
   board: 0
   advisory: 0
   position:
-  bio: "Mara Mendes leitet das EU-Forschungsprojekt DIGIWHIST, einem Projekt das öffentliche Beschaffungsprozesse transparenter und effizienter gestalten will. Bevor sie zur Open Knowledge Foundation Deutschland kam hat sie für das internationale Sekretariat von Transparency International im Bereich Advocacy und Kampagnen gearbeitet. 
-Mara interessiert sich vor allem innovative Konzepte in der Korruptionsbekämpfung und Prävention.  
-Sie hat einen Master in Media, Communication and Development und einen Bachelor in Soziologie, Politik und Medienwissenschaften. "
+  bio: "Mara Mendes leitet das EU-Forschungsprojekt DIGIWHIST, einem Projekt das öffentliche Beschaffungsprozesse transparenter und effizienter gestalten will. Bevor sie zur Open Knowledge Foundation Deutschland kam hat sie für das internationale Sekretariat von Transparency International im Bereich Advocacy und Kampagnen gearbeitet. Mara interessiert sich vor allem innovative Konzepte in der Korruptionsbekämpfung und Prävention. Sie hat einen Master in Media, Communication and Development und einen Bachelor in Soziologie, Politik und Medienwissenschaften. "
   mail: mara.mendes@okfn.de
   twitter: maryrmendes
   website:
