--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -128,7 +128,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Michael ist Projektleiter des Open-Data-Trainingsprogramms der OKF DE. Er arbeitet also Datenjournalist, Trainer und Dozent. An der Hochschule für Technik und Wirtschaft Berlin ist Michael seit 2013 Lehrbeauftragter für Open Data. Er engagiert sich seit 2010 für mehr und besser nutzbare offene Daten und ist Mitorganisator des jährlichen Berlin Open Data Day. Zwischen 2004 und 2012 arbeitete Michael als Online-Redakteur bei Tagesspiegel, Rundfunk Berlin-Brandenburg und Hasso-Plattner-Institut."
+  bio: "Michael ist Senior Trainer beim Open-Data-Trainingsprogramms der OKF DE. Er arbeitet als Datenjournalist, Trainer und Dozent. An der Hochschule für Technik und Wirtschaft Berlin war Michael von 2013 bis 2015 Lehrbeauftragter für Open Data. Er engagiert sich seit 2010 für mehr und besser nutzbare offene Daten und ist Mitorganisator des jährlichen Berlin Open Data Day. Zwischen 2004 und 2012 arbeitete Michael als Online-Redakteur bei Tagesspiegel, Rundfunk Berlin-Brandenburg und Hasso-Plattner-Institut."
   mail: michael.hoerz@okfn.de
   twitter: data_meining
   website: michael-hoerz.de
