--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -106,7 +106,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Walter ist Ökonom und seit Jahren netzpolitsch aktiv. Aktuell arbeitet er an den Projekten BIG - Big Data Public Private Forum - und am Digitalen Offenheitsindex [do:index] und betreut den Open Data Census. Nach Berlin kam er 2012 als Co-Founder eines Startups, zuvor arbeitete er 5 Jahre als Sysadmin in NYC."
+  bio: "Walter ist Ökonom und seit Jahren netzpolitsch aktiv. Aktuell arbeitet er an den Projekten Open Data Incubator for Europe (ODINE), einem H2020-Forschungsprojekt und am Digitalen Offenheitsindex [do:index]. Überdies betreut er den Open Data Census. Nach Berlin kam er 2012 als Co-Founder eines Startups, zuvor arbeitete er 5 Jahre als Sysadmin in NYC."
   mail: walter.palmetshofer@okfn.de
   twitter: vavoida
   website:
@@ -192,7 +192,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Dominik ist Datenjournalist und unterstützt seit September 2015 das EU-Forschungsprojekt OpenBudgets.eu. "
+  bio: "Dominik ist Journalist mit einer Vorliebe für Daten. Seit September 2015 unterstützt er für die Open Knowledge Foundation Deutschland das Projekt Openbudgets.eu. Daneben arbeitet der Wiener als Journalist für Krautreporter und das ZDF Lobbyradar. Zuvor war er Datenredakteur bei der österreichischen Nachrichtensendung Zeit im Bild beim ORF. Er hat Journalismus an der CUNY in New York studiert und ein Diplomstudium in Theater-, Film- und Medienwissenschaft abgeschlossen."
   mail: dominik.wurnig@okfn.de
   twitter:
   website:
