updated team section, reverted services section

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -71,7 +71,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Bela hat einen Master in „European Studies on Society, Science & Technology“ und startete im November 2014 als Praktikant bei der OKF DE. Seit Januar 2015 ist er fest angestellt. Er unterstützt das Projekt „Coding da Vinci“ als Projektassistent, leitet eigene Projekte und übernimmt Aufgaben der Öffentlichkeitsarbeit für die Organisation."
+  bio: "Bela ist seit Januar 2015 bei der OKF DE angestellt und arbeitet gegenwärtig zusammen mit Anna für das EU Projekt OpenBudgets. Er hat einen Master in „European Studies on Society, Science & Technology“ in Maastricht und unterstützt die OKF DE in Sachen Öffentlichkeitsarbeit (Newsletter, Blogeinträge und Pressearbeit) sowie bei Übersetzungen und Grafikdesign. Er startete im November 2014 als Praktikant bei der OKF DE."
   mail: bela.seeger@okfn.de
   twitter: belaseeger
   website:
