--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -133,6 +133,7 @@
   mail: arne.semsrott@okfn.de
   twitter: arnesemsrott
   website:
+  github: arnese
 
 - name: Michael Hörz
   img: michaelhoerz
