--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -33,3 +33,9 @@ projekt:
   WeitereProjekte: Weitere Projekte
 person:
   ArbeitetAn: arbeitet an
+thema:
+  WeitereThemen: Weitere Themen
+start:
+  Intro: >
+    Die Open Knowledge Foundation Deutschland ist ein gemeinnütziger Verein,<br/>
+    der sich für offenes Wissen, offene Daten, Transparenz und Beteiligung einsetzt.
