--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -33,3 +33,9 @@ projekt:
   WeitereProjekte: More Projects
 person:
   ArbeitetAn: works on
+thema:
+  WeitereThemen: More Topics
+start:
+  Intro: >
+    We shape the digital society with open knowledge and tools. <br/>
+    We empower society with digital tools and open knowledge.
