translate projekte-page

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -26,6 +26,10 @@ projekte:
   Projekte: Projekte
   Intro: >
     Wir bringen Menschen zusammen, die digitale Bürger-Werkzeuge bauen, und wir betreiben offene Web-Infrastruktur für unsere Demokratie.
+  Forschungsprojekte: Forschungsprojekte
+  Tools: Tools
+  Events: Events
+  Archiv: Archiv
 projekt:
   Ansprechpartner: Ansprechpartner
   Mailingliste: Mailingliste
